--- a/examples/teapot-scene.yaml
+++ b/examples/teapot-scene.yaml
@@ -124,7 +124,7 @@ camera:
     x: 0
     y: 1
     z: 0
-  animation:
-    degrees: 360
-    timeSec: 5
-    fps: 24
+  # animation:
+  #   degrees: 360
+  #   timeSec: 5
+  #   fps: 24
