--- a/examples/cube-texture.yaml
+++ b/examples/cube-texture.yaml
@@ -3,9 +3,8 @@ height: 1080
 
 materials:
   - name: wood
-    texture: 
-      file: skybox-texture.png
-      cubemap: true
+    texture:
+      file: wood_floor.jpeg
 
 scene:
   cubes:
@@ -13,15 +12,15 @@ scene:
       material: wood
       transforms:
         - type: scaling
-          x: 15
-          y: 15
-          z: 15
+          x: 5
+          y: 5
+          z: 5
 
 camera:
   from:
-    x: 0
+    x: 10
     y: 10
-    z: -10
+    z: -20
   to:
     x: 0
     y: 0
@@ -34,8 +33,8 @@ camera:
 light:
   p:
     x: 0
-    y: 0
-    z: 0
+    y: 30
+    z: -20
   intensity:
     r: 255
     g: 255
